# csg-raymarching

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: dito.json  dito_2.json  scene.json  test.json
shaders/: frag.glsl  ray_marching.glsl  uniforms.glsl  utils.glsl  vert.glsl
src/: format_json.cpp  json.cpp  json.hpp  json_import.hpp  main.cpp
